Updating Handlebars Structure to be mobile first for the Navboxes and updating SCSS to adjust the changes for the Navboxes. FIXES navbox title spilling out of the box on mobile devices.

--- a/src/patterns/navbox/_navbox.scss
+++ b/src/patterns/navbox/_navbox.scss
@@ -111,19 +111,24 @@
 
 	.navbox {
 		margin-bottom: 2em;
+		overflow: hidden;
+		max-height: 130px;
 	}
 
 	.navbox-image {
-  		max-height: 65px;
-		overflow: hidden;
+		position: absolute;
+		top: 0;
+		z-index: -10;
   	}
 
   	.navbox-image img {
   		margin-top: -20%;
   	}
 
-  	.navbox-title {
+  	div.navbox-title {
 		top: 0;
+		background: rgba(0,83,155,0.75);
+		position: relative;
 	}
 
 }
